tests/compile-fail/i64_overflow.stderr
error: i64 overflow
  --> tests/compile-fail/i64_overflow.rs:11:5
   |
11 |     C,
   |     ^
